# EastLightRC-505mk2Librarian

./: .gitignore  MEMORY001A.RC0  README.md  pyproject.toml  rc505-mk2-feasibility.md
dumps/: README.md  ctl_func_map.txt
src/eastlight/: __init__.py
src/eastlight/cli/: __init__.py  main.py
src/eastlight/core/: __init__.py  config.py  library.py  model.py  parser.py  schema.py  wav.py  writer.py
src/eastlight/gui/: __init__.py
src/eastlight/schema/: assign.yaml  color.yaml  ectl.yaml  eq.yaml  fixed_value.yaml  fx_setup.yaml  fx_slot.yaml  fx_subslot.yaml  fx_types.yaml  ictl.yaml  input.yaml  master.yaml  master_fx.yaml  midi.yaml  mixer.yaml  name.yaml  output.yaml  play.yaml  pref.yaml  rec.yaml  rhythm.yaml  routing.yaml  setup.yaml  track.yaml  usb.yaml
src/eastlight/schema/effects/: auto_pan.yaml  auto_riff.yaml  beat_repeat.yaml  beat_scatter.yaml  beat_shift.yaml  bpf.yaml  bpf_seq.yaml  chorus.yaml  delay.yaml  dist.yaml  dynamics.yaml  electric.yaml  eq.yaml  flanger.yaml  flanger_seq.yaml  freeze.yaml  g2b.yaml  gate_reverb.yaml  granular_delay.yaml  harmonist_auto.yaml  harmonist_manual.yaml  hpf.yaml  hpf_seq.yaml  isolator.yaml  isolator_seq.yaml  lofi.yaml  lpf.yaml  lpf_seq.yaml  manual_pan.yaml  manual_pan_seq.yaml  mod_delay.yaml  octave.yaml  octave_seq.yaml  osc_bot.yaml  osc_bot_seq.yaml  osc_vocoder.yaml  panning_delay.yaml  pattern_slicer.yaml  phaser.yaml  phaser_seq.yaml  (+30 more)
tests/: conftest.py  test_cli.py  test_dryrun_ctl.py  test_fx.py  test_model.py  test_parser.py  test_phase7.py  test_safety.py  test_schema.py  test_system.py  test_wav.py  test_writer.py
